fixed background stretching

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,10 +1,10 @@
 body {
   background-image: url("../images/background.jpg");
   color: white;
-  background-size: cover;
+  background-size: center;
   background-color: black;
   background-repeat: no-repeat;
-  height:100%;
+  background-attachment: fixed;
 }
 
 #inventoryIcon {
